--- a/package.json
+++ b/package.json
@@ -1,44 +1,71 @@
 {
-  "name": "react-adadmin",
+  "name": "ad-project",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
     "dev": "webpack server --progress --config config/webpack.dev.config.js",
-    "build": "webpack  --progress --config config/webpack.prod.config.js",
+    "build": "cross-env NODE_ENV=production webpack --progress --config config/webpack.prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "@types/react-router-config": "^5.0.6",
-    "@types/react-router-dom": "^5.1.8",
-    "antd": "^4.20.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0",
-    "typescript": "^4.3.5"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
-    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "fork-ts-checker-notifier-webpack-plugin": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.4.0",
     "html-webpack-plugin": "^4.5.0",
-    "open-browser-webpack4-plugin": "^1.0.0",
+    "mini-css-extract-plugin": "^2.1.0",
     "sass": "^1.51.0",
+    "open-browser-webpack4-plugin": "^1.0.0",
     "sass-loader": "^10.1.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^2.0.0",
-    "ts-loader": "^9.3.0",
+    "ts-loader": "^9.2.3",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@ant-design/charts": "^1.2.13",
+    "@types/lodash": "^4.14.173",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@types/react-router-config": "^5.0.3",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "antd": "^4.16.7",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
+    "lodash": "^4.17.21",
+    "mobx": "^6.3.10",
+    "mobx-react": "^7.2.1",
+    "moment": "^2.29.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.6",
+    "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "typescript": "^4.3.5"
   }
 }
